--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,35 @@
     <link rel="stylesheet" href="../dist/output.css" />
   </head>
   <body>
-    <h1 class="bg-red-500">Test</h1>
+    <!-- Hero Section Start -->
+    <section id="home" class="pt-36">
+      <div class="container">
+        <div clas="flex flex-wrap">
+          <div class="w-full self-center px-4">
+            <h1 class="text-base font-semibold text-purple-600">
+              Halo Semua, Saya
+              <span class="block font-bold text-slate-900 text-4xl mt-1"
+                >Farida Kurniawan</span
+              >
+            </h1>
+            <h2 class="font-medium text-slate-500">
+              Graphic Design & Learning <span class="text-black">Coding</span>
+            </h2>
+            <p class="font-medium text-slate-400 my-5 leading-relaxed">
+              Belajar programming dengan mengikuti tutorial yang ada di
+              <span class="text-black font-semibold">youtube</span>
+            </p>
+
+            <a
+              href="#"
+              class="text-base font-semibold text-white bg-purple-600 py-3 px-8 rounded-xl hover:shadow-xl hover:bg-purple-500"
+              >Hubungi Saya</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Hero Section End -->
   </body>
 </html>
