--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <section id="home" class="pt-36">
       <div class="container">
         <div clas="flex flex-wrap">
-          <div class="w-full self-center px-4">
-            <h1 class="text-base font-semibold text-purple-600">
+          <div class="w-full self-center px-4 lg:w-1/2">
+            <h1 class="text-base font-semibold text-primary md:text-xl">
               Halo Semua, Saya
-              <span class="block font-bold text-slate-900 text-4xl mt-1"
+              <span class="block font-bold text-dark text-4xl mt-1"
                 >Farida Kurniawan</span
               >
             </h1>
@@ -20,15 +20,24 @@
               Graphic Design & Learning <span class="text-black">Coding</span>
             </h2>
             <p class="font-medium text-slate-400 my-5 leading-relaxed">
-              Belajar programming dengan mengikuti tutorial yang ada di
-              <span class="text-black font-semibold">youtube</span>
+              Belajar programming dengan mengikuti tutorial adalah
+              <span class="text-black font-semibold">jalan ninjaku</span>
             </p>
 
             <a
               href="#"
-              class="text-base font-semibold text-white bg-purple-600 py-3 px-8 rounded-xl hover:shadow-xl hover:bg-purple-500"
+              class="text-base font-semibold text-white bg-purple-600 py-3 px-8 rounded-xl hover:shadow-xl hover:opacity-90 transition duration-300 ease-in-out"
               >Hubungi Saya</a
             >
+          </div>
+          <div class="w-full self-end px-4 lg:w-1/2">
+            <div class="mt-10">
+              <img
+                src="../dist/img/farid.png"
+                alt="farid"
+                class="max-w-full mx-auto"
+              />
+            </div>
           </div>
         </div>
       </div>
