--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,15 @@
     <!-- Hero Section Start -->
     <section id="home" class="pt-36">
       <div class="container">
-        <div clas="flex flex-wrap">
+        <div class="flex">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">
               Halo Semua, Saya
-              <span class="block font-bold text-dark text-4xl mt-1"
+              <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl"
                 >Farida Kurniawan</span
               >
             </h1>
-            <h2 class="font-medium text-slate-500">
+            <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">
               Graphic Design & Learning <span class="text-black">Coding</span>
             </h2>
             <p class="font-medium text-slate-400 my-5 leading-relaxed">
@@ -31,7 +31,7 @@
             >
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
-            <div class="mt-10">
+            <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
                 src="../dist/img/farid.png"
                 alt="farid"
